Fix for paginated list on cat (1251-1317px was wrapping below left nav)

--- a/stylesheets/modules/filters.less
+++ b/stylesheets/modules/filters.less
@@ -841,7 +841,7 @@
         width: 100%;
     }
 }
-@media only screen and (min-width: 1162px) and (max-width: 1251px){
+@media only screen and (min-width: 1162px) and (max-width: 1320px){
     .mz-category .mz-l-paginatedlist, .mz-searchresults .mz-l-paginatedlist {
         width: 75% !important;
     }
